# wheather

./: .gitignore  README.md  docker-compose.yml  example.env
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  routers.py
backend/api/app/: __init__.py  city.py  test.py  weather.py
backend/core/: lifespan.py  logger.py  settings.py
backend/core/celery/: __init__.py  db_connection.py  utils.py  worker.py
backend/core/database/: __init__.py  connection.py  db.py
backend/core/redis/: connection.py
backend/hooks/: city.py
backend/models/: __init__.py  weather.py
backend/schemas/: __init__.py  city.py  responses.py  weather.py
backend/schemas/open_weather/: __init__.py  geo_api.py  weather.py
backend/services/: base.py  city.py  open_weather_api.py  weather.py
backend/tasks/: task.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/app/: api.ts  app.html  app.ts
frontend/src/app/add-city/: add-city.spec.ts  add-city.ts
frontend/src/app/city-button/: city-button.html  city-button.spec.ts  city-button.ts
frontend/src/app/city-button-create/: city-button-create.html  city-button-create.spec.ts  city-button-create.ts
frontend/src/app/city-list/: city-list.html  city-list.spec.ts  city-list.ts
frontend/src/app/models/: city-get.ts  city.ts  weather-get.ts  weather.ts
frontend/src/app/weather/: weather.html  weather.ts
